# MLPrimitives

./: .buildinfo  .flake  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  MANIFEST.in  Makefile  README.md  authors.html  contributing.html  example.json  genindex.html  history.html  index.html  installation.html  mlprimitives.adapters.html  mlprimitives.audio.html  mlprimitives.html  mlprimitives.image.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.html
.github/: ISSUE_TEMPLATE.md
_modules/: index.html  mlprimitives.html
_sources/: index.rst.txt  installation.rst.txt  mlprimitives.adapters.rst.txt  mlprimitives.audio.rst.txt  mlprimitives.image.rst.txt  mlprimitives.rst.txt  modules.rst.txt  usage.rst.txt
_static/: documentation_options.js
api/: mlprimitives.adapters.community.html  mlprimitives.adapters.cv2.html  mlprimitives.adapters.featuretools.html  mlprimitives.adapters.html  mlprimitives.adapters.keras.html  mlprimitives.adapters.lightfm.html  mlprimitives.adapters.networkx.html  mlprimitives.adapters.pandas.html  mlprimitives.adapters.skimage.html  mlprimitives.adapters.statsmodels.html  mlprimitives.audio_featurization.html  mlprimitives.audio_padding.html  mlprimitives.candidates.audio_featurization.html  mlprimitives.candidates.audio_padding.html  mlprimitives.candidates.dsp.html  mlprimitives.candidates.html  mlprimitives.candidates.timeseries.cyclegan.html  mlprimitives.candidates.timeseries.html  mlprimitives.candidates.timeseries_errors.html  mlprimitives.cli.html  mlprimitives.counters.html  mlprimitives.custom.counters.html  mlprimitives.custom.feature_extraction.html  mlprimitives.custom.feature_selection.html  mlprimitives.custom.html  mlprimitives.custom.preprocessing.html  mlprimitives.custom.text.html  mlprimitives.custom.timeseries_anomalies.html  mlprimitives.custom.timeseries_preprocessing.html  mlprimitives.custom.trivial.html  mlprimitives.datasets.html  mlprimitives.evaluation.html  mlprimitives.feature_extraction.html  mlprimitives.feature_selection.html  mlprimitives.html  mlprimitives.preprocessing.html  mlprimitives.text.html  mlprimitives.timeseries.html  mlprimitives.timeseries_errors.html  mlprimitives.trivial.html  (+1 more)
community/: adapters.html  annotations.html  contributing.html  custom.html  welcome.html
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
examples/: function_primitive.json
getting_started/: concepts.html  install.html  quickstart.html
jsons/: community.CommunityBestPartition.json  cv2.GaussianBlur.json  featuretools.dfs.json  keras.Sequential.LSTMTextClassifier.json  keras.Sequential.LSTMTextRegressor.json  keras.Sequential.SingleLayerCNNImageClassifier.json  keras.Sequential.SingleLayerCNNImageRegressor.json  keras.applications.densenet.DenseNet121.json  keras.applications.resnet50.ResNet50.json  keras.preprocessing.sequence.pad_sequences.json  keras.preprocessing.text.Tokenizer.json  lightfm.LightFM.json  mlprimitives.audio.featurization.featurize_audio.json  mlprimitives.audio.padding.AudioPadder.json  mlprimitives.audio_featurization.featurize_audio.json  mlprimitives.audio_padding.AudioPadder.json  mlprimitives.community.CommunityBestPartition.json  mlprimitives.feature_extraction.CategoricalEncoder.json  mlprimitives.feature_extraction.DatetimeFeaturizer.json  mlprimitives.feature_extraction.StringVectorizer.json  mlprimitives.feature_selection.ExtraTreesClassifierFeatureSelector.json  mlprimitives.feature_selection.ExtraTreesRegressorFeatureSelector.json  (+27 more)
(+545 files in other folders)
