[build-system]
requires = [
    "setuptools >= 59",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "mlprimitives"
readme = "README.md"
description = "Pipelines and primitives for machine learning and data science."
version = "0.3.3.dev0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
authors = [
    {name="MIT Data To AI Lab", email="dailabmit@gmail.com"}
]
maintainers = [
    {name="MIT Data To AI Lab", email="dailabmit@gmail.com"}
]
keywords = ["mlblocks", "mlprimitives", "pipelines", "primitives", "machine learning", "data science"]
license = {file = "LICENSE"}
requires-python = ">=3.6,<3.9"
dependencies = [
    "Keras>=2.4,<2.5",
    "featuretools>=0.6.1,<0.23",
    "iso639>=0.1.4,<0.2",
    "langdetect>=1.0.7,<2",
    "lightfm>=1.15,<2",
    "mlblocks>=0.4.0.dev0,<0.5",
    "networkx>=2.0,<3",
    "nltk>=3.3,<4",
    "numpy<1.21.0,>=1.16.0",
    "opencv-python>=3.4.0.12,<5",
    "pandas>=1,<2",
    "python-louvain>=0.10,<0.14",  # community
    "scikit-image>=0.15",
    "scikit-learn>=0.21",
    "scipy>=1.1.0,<2",
    "statsmodels>=0.9.0,<0.13",
    "tensorflow>=2,<2.5",
    "xgboost>=0.72.1,<1",
]

[project.urls]
"Documentation" = "https://mlbazaar.github.io/MLPrimitives/"
"Source Code"= "https://github.com/MLBazaar/MLPrimitives"
"Changes" = "https://mlbazaar.github.io/MLPrimitives/history.html"
"Issue Tracker" = "https://github.com/MLBazaar/MLPrimitives/issues"

[project.optional-dependencies]
test = [
    "pytest>=3.4.2",
    "pytest-cov>=2.6.0",
    "pytest-runner>=2.11.1",
    "rundoc>=0.4.3,<0.5",
]
docs = [
    "m2r>=0.2.0,<0.3",
    "Sphinx>=1.7.1,<3",
    "sphinx_rtd_theme>=0.2.4,<0.5",
    "docutils>=0.14,<0.18",
    "ipython>=6.5.0",
    "mistune>=0.7,<2",
    "Jinja2>=2,<3.1",
]
dev = [
    # general
    'bumpversion>=0.5.3,<0.6',
    'pip>=9.0.1',
    'watchdog>=0.8.3,<0.11',

    # style check
    'flake8>=3.7.7,<4',
    'isort>=4.3.4,<5',

    # fix style issues
    'autoflake>=1.1,<2',
    'autopep8>=1.4.3,<2',

    # distribute on PyPI
    'twine>=1.10.0,<4',
    'wheel>=0.30.0',

    # Advanced testing
    'coverage>=4.5.1,<6',
    'tox>=2.9.1,<4',
]


[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
zip-safe = false

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"*" = [
    "AUTHORS.rst",
    "CONTRIBUTING.rst",
    "HISTORY.md",
    "LICENSE",
    "README.md",
    "*.rst",
    "/mlprimitives/*.json",
    "/tests/*",
    "/docs/*.md",
    "/docs/*.rst",
    "/docs/conf.py",
    "/docs/Makefile",
    "/docs/make.bat",
    "/docs/*.jpg",
    "/docs/*.png",
    "/docs/*.gif",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "* __pycache__",
    "*.py[co]",
]

[tool.pytest.ini_options]
norecursedirs = ["tests/primitives", "tests/pipelines"]
testpaths = [
    "/tests/*"
]


[tool.isort]
include_trailing_comment = true
line_length = 99
lines_between_types = 0
multi_line_output = 4
use_parentheses = true
not_skip = "__init__.py"
skip_glob = "*.bak"